# easyLiftover

./: .coveragerc  .gitmodules  Dockerfile  README.md  manage.py  publish.sh  pyproject.toml  requirements.txt  run.sh  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: django.yml  python-package.yml  python-publish.yml  testing.yml
easyliftover/: liftover.py  types.json  types.py
easyliftover/lifters/: __init__.py  abstract.py  bed.py  bedgraph.py  bigwig.py  gff.py  vcf.py  wig.py
keep/: types.py  uplift.py
src/: __init__.py  genomes.py  uplift.py
test/: test_genomes.py  test_lifters.py  test_pyliftover.py  test_sources.py  test_targets.py  test_types.py  test_uplifting.py
test/data/: hg19.bed  hg19.bedgraph  hg19.gff  hg19.vcf  hg19.wig  hg38.bed  hg38.bedgraph  hg38.gff  hg38.vcf  hg38.wig
test_data/: hg19.bed  hg38.bed
webuplift/: asgi.py  settings.py  test.py  urls.py  wsgi.py
webuplift/views/: __init__.py  targets.py  types.py  uplift.py
webuplift/views/lifters/: __init__.py  abstract.py  bed.py  gff.py
