[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "easy-uplift"
version = "0.0.1"
description = "A python package for uplifting biological files"
license = "MIT"
authors = ["Nico Trummer <nictru32@gmail.com>"]
repository = "https://github.com/biomedbigdata/easyUplift"
homepage = "https://github.com/biomedbigdata/easyUplift"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.pytest.ini_options]
addopts = "--cov"